# WavelengthWatch

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .swiftformat  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LOCAL_DEVELOPMENT.md  README.md  XCODE_BUILD_SETUP.md  dev-setup.sh  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.claude/: README.md
.claude/agents/: agent-hierarchy.md  backend-orchestrator.md  chief-architect.md  cicd-orchestrator.md  delegation-rules.md  documentation-orchestrator.md  frontend-orchestrator.md  hierarchy.md  testing-orchestrator.md
.github/workflows/: ci.yml
app/: database.py  main.py  models.py  schemas.py  seed_data.py  utils.py
app/routers/: __init__.py  curriculum.py  journal.py  layer.py  phase.py  strategy.py
backend/: README.md  app.py  cache.py  constants.py  database.py  db.py  logging_config.py  main.py  models.py  requirements-dev.txt  requirements.txt  schemas.py  schemas_catalog.py  utils.py
plan/: 2026-01-22-app-store-readiness.md
prompts/: 2025-10-29-bisect-session-state.md  2025-10-29-incremental-test-fix-plan.md  2025-10-31-investigate-remaining-crashes.md  2025-12-08-streamlined-emotion-flow-refactor-plan.md  FINAL_ALL_BUGS_IDENTIFIED.md  add-headers.md  app_initialization_crash_fix_plan.md  ci-and-pre-commit-bootstrap  comprehensive_test_crash_analysis.md  front-end-tracer-code.md  journal_epic.md  journal_feature.md  journal_requirements.md  mainactor_refactoring_plan.md  schedule_feature_implementation_plan.md  swift_testing_crash_investigation.md  test_framework_conflict_resolution_plan.md
scripts/: add_files_to_xcode.py  check-backend.sh  convert_csv_to_json.sh  pr-status.sh  setup-local-api.sh  swiftformat-lint.sh  swiftformat_lint.sh  watchos-build.sh
store-assets/: README.md
tests/: test_journal.py
tests/backend/: app.db  (+23 more)
(+336 files in other folders)
