[project]
name = "wavelengthwatch-backend"
version = "0.1.0"
description = "Backend service for WavelengthWatch"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "pydantic",
    "python-dotenv",
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = "(^frontend/)"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["backend"]
src_paths = ["backend", "tests", "scripts"]
