[project]
name = "wavelengthwatch-backend"
version = "0.1.0"
description = "Backend service for WavelengthWatch"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "pydantic",
    "python-dotenv",
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["backend"]
src_paths = ["backend", "tests", "scripts"]
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
